--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: static;
-    top: 0px;
     width: 100%;
     z-index: 99;
     background-color: rgba(0, 0, 0, 0);
@@ -49,17 +47,60 @@ a:active{
     border: 1px solid white;
     border-radius: 5px;
     color: white;
+} 
+
+/* Hamburger icon styles */
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+}
+
+.menu-toggle span {
+    height: 4px;
+    width: 100%;
+    background: #536941;
+    margin: 4px 0;
+    border-radius: 2px;
+    transition: 0.3s;
 }
 
 .landing_page{
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/header-hero.jpg);
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    /* background-color: black; */
     height: 700px;
     justify-items: center;
     align-content: center;
+}
+
+.p1{
+    font-size: 50px;
+    line-height: 55px;
+    padding-left: 50px;
+}
+
+.p2{
+    font-size: 117px;
+    line-height: 130px;
+}
+
+.p3{
+    font-size: 16px;
+    line-height: 34px;
+    padding-left: 40px;
+}
+
+.p4{
+    font-size: 16px;
+    line-height: 24px;
+    padding-left: 60px;
 }
 
 main div{
@@ -89,13 +130,12 @@ section{
 }
 
 .services{
-    height: 200px;
     justify-items: center;
     align-content: center;
 } 
 
-.topic{
-    justify-items: center;
+.text{
+    padding-top: 30px;
     font-family: "DM Sans", sans-serif;
 font-size: 40px;
 font-weight: 400;
@@ -106,20 +146,27 @@ color: rgb(83, 105, 66);
 .divider{
     width: 100px;
     border: 1px solid yellow;
-}
+} 
 
-
-
-.service-grid{
+.Service{
+    padding: 10px 100px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 350px 350px 350px;
-    gap: 30px;
-    padding: 20px 100px;
-    font-family: "DM Sans", sans-serif;
-    font-weight: 400;
-    line-height: 27.2px;
-    color: rgba(82, 104, 64, 0.75);
+    grid-template-rows: 350px;
+    gap: 20px;
+}
+
+.col h3{
+    font-size: 20px; 
+    color: rgb(83, 105, 66); 
+    padding-top: 20px;
+}
+
+.col p{
+    font-size: 16px; 
+    width: 300px;
+    padding-top: 10px;
+    color: rgb(124, 145, 115);
 }
 
 .testimonial{
@@ -198,12 +245,12 @@ padding-bottom: 50px;
     color: rgba(83, 105, 65, 0.8);
 }
 
-.question{
+#question{
     background-image: url(./images/footer-hero-big.jpg);
-    height: 400px;
-    width: 100%;
+    height: 500px;
+    /* width: 100%; */
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover; 
     padding-top: 70px;
     justify-items: center;
 }
@@ -359,9 +406,9 @@ width: 700px;
     color: rgb(83, 105, 66);
 }
 
-.service_P{
+.service_p{
     width: 300px;
-    font-size: 1px;
+    font-size: 16px;
     font-weight: lighter;
     line-height: 30px;
 }
@@ -371,7 +418,7 @@ width: 700px;
     height: 400px;
     width: 100%;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     justify-items: center;
     align-content: center;
 }
@@ -476,15 +523,453 @@ text-align: center;
         gap: 20px;
     }
 
+    .foot_bar a:link{
+        text-decoration: none;
+        color: rgba(83, 105, 65, 0.8);
+    }
 
-    /* === Responsive Design === */
+    .foot_bar a:visited{
+        color: rgba(83, 105, 65, 0.8);
+    }
 
-/* Medium devices (tablets, 768px and up) */
+    .foot_bar a:active{
+        color: rgba(83, 105, 65, 0.8);
+    }
+
+    .foot_bar a:focus{
+        color: rgba(83, 105, 65, 0.8);
+    }
+
+    .foot_bar li{
+        font-family: "DM Sans", sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 18px;
+    }
+
+    .foot_bar li:hover{
+        color: yellow;
+    }
+
+    .foot_bar li:active{
+        color: yellow;
+    }
+
+    .foot_bar li:focus{
+        color: yellow;
+    }
+
+    .foot_bar li:visited{
+        color: rgba(83, 105, 65, 0.8);
+    }
+
+    .foot_bar li:link{
+        color: rgba(83, 105, 65, 0.8);
+    }
+
+    .foot_bar li:focus{
+        color: rgba(83, 105, 65, 0.8);
+    }
+
+    footer img{
+        height: 50px;
+    }
+
+
+    /* Responsive Design */
+
+/* Medium tablets */
 @media (max-width: 1024px) {
-    
+
+    body{
+        width: auto;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
+
+    .p1{
+        font-size: 30px;
+        line-height: 45px;
+        /* padding-left: 30px; */
+    }
+
+    .p2{
+        font-size: 60px;
+        line-height: 60px;
+        padding-left: 30px;
+    }
+
+    .p3{
+        font-size: 14px;
+        line-height: 24px;
+        /* padding-left: 30px; */
+    }
+
+    .p4{
+        font-size: 14px;
+        line-height: 24px;
+        /* padding-left: 30px; */
+        /* text-align: center; */
+    }
+
+    .main_button{
+        margin-left: 30px;
+        margin-top: 30px;
+        font-family: "DM Sans", sans-serif;
+        font-size: 17px;
+        font-weight: 400;
+        line-height: 32px;
+        color: rgba(82, 104, 64, 0.75);
+        border: 1px solid yellow; 
+        border-radius: 5px;
+        background-color: yellow;
+        width: 120px;
+        height: 40px;
+    }
+
+    main div{
+        font-weight: 400;
+        color: rgb(255, 255, 255);
+        color: white;
+        text-align: center;
+    }
+
+    .landing_page{
+        height: 400px
+    }
+
+
+    .navbar {
+        display: none;
+        position: absolute;
+        top: 70px;
+        right: 1px;
+        background: white;
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px 30px;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        color: black;
+        width: 100%;
+    }
+    .navbar.active {
+        display: flex;
+    }
+
+    .navbar a {
+        padding: 8px;
+        font-size: 16px;
+        color: black; 
+    }
+    .navbar a:hover {
+        color: yellow;
+    }
+    .navbar a:active {
+        color: yellow;
+    }
+    .navbar a:focus {
+        color: yellow;
+    }
+
+    .navbar a:visited {
+        color: black;
+    }
+    .nav_button{
+        display: none;
+    }
+
+
+    .menu-toggle {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 30px;
+    }
+    header {
+        padding: 10px 30px;
+    }
+
+    .services{
+        padding: 20px 50px;
+    }
+
+    .Service_section{
+        height: auto;
+        justify-items: center;
+        align-content: center;
+    }
+    .Service{
+        padding: 20px 30px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .col img{
+        width: 550px;
+        height: auto;
+        margin-bottom: 20px;
+    }
+
+.testimonial{
+    padding-top: 50px;
+    height: auto;
+    justify-items: center;
+    align-content: center;
+    text-align: center;
+}
+.testimony{
+    font-family: Forum, display;
+    font-size: 25px;
+    font-weight: 200;
+    line-height: 35px;
+    width: 90%;
 }
 
-/* Small devices (phones, 767px and below) */
-@media (max-width: 767px) {
-    
+.about_us{
+    height: auto;
+    padding: 20px 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
 }
+.about_image{
+    display: none;
+}
+
+.question{
+    padding: 20px 30px;
+    height: auto;
+    width: 100%;
+    text-align: center;
+    background-image: url(./images/footer-hero-big.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.question_heading{
+    font-family: "DM Sans", sans-serif;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 60px;
+    color: rgb(83, 105, 66);
+}
+
+.question_p{
+    padding-top: 20px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 32px;
+    color: rgba(82, 104, 64, 0.75);
+    width: 90%;
+    margin: auto;
+}
+
+.question_button{
+    margin-top: 30px;
+    font-family: "DM Sans", sans-serif;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 32px;
+    color: rgba(82, 104, 64, 0.75);
+    border: 1px solid yellow;
+    border-radius: 5px;
+    background-color: yellow;
+    width: 120px;
+    height: 40px;
+}
+
+.about_main{
+    height: 350px;
+    width: 100%;
+}
+.about_h2{
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 60px;
+    text-align: center;
+}
+
+.about_2nd_section{
+    width: auto;
+    height: auto;
+    padding: 20px 30px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+}
+
+.about_main_p{
+    padding-top: 50px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    width: 90%;
+    margin: auto;
+}
+
+.about_2nd_section img{
+    padding-top: 50px;
+    width: 100%;
+    height: auto;
+}
+
+.about_grid{
+    width: 100%;
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    justify-items: center;
+}
+
+.about_testimonial{
+    padding-top: 50px;
+    height: 300px;
+    justify-items: center;
+    align-content: center;
+    text-align: center;
+}
+
+.img1{
+    width: 20px;
+    opacity: 0.3;
+}
+.img2{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.about_testimonial_p{
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 35px;
+    width: 90%;
+    padding-bottom: 5px;
+}
+
+.avatar_on_about{
+    font-family: "DM Sans", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 27.2px;
+    color: rgba(82, 104, 64, 0.75);
+}
+
+.contact_main{
+    height: 300px;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/contact-hero-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    justify-items: center;
+}
+
+.about_h2{
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 60px;
+    text-align: center;
+}
+
+.contact_grid{
+    width: auto;
+    height: auto;
+    display: flex;
+        flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+    .contact_form {
+        order: 1;
+    }
+    .contact_info {
+        order: 2;
+        margin-top: 20px;
+        padding-top: 20px;
+        text-align: center;
+    }
+.contact_p1{
+    font-size: 25px;
+    font-weight: 200;
+    line-height: 35px;
+    width: 90%;
+}
+
+.contact_p2{
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    width: 90%;
+}
+.contact_p{
+    padding-right: 50px;
+    font-size: 14px;
+    font-weight: 200;
+    line-height: 18px;
+    margin-top: 20px;
+}  
+
+.img_section{
+    padding: 20px 30px;
+    height: auto;
+    width: 100%;
+}
+
+.contact_img_p{
+    padding: 10px 30px;
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 44px;
+    text-align: center;
+}
+
+.contact_img{
+    margin-top: 30px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+footer{
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;}
+
+}
+
+
+/* Small tablets and large phones */
+@media (max-width: 768px) {
+    .container{
+        height: auto;
+    }
+
+    .row{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+/* Mobile phones */
+@media (max-width: 480px) {
+    .container{
+        height: auto;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+/* End of Responsive Design */
+/* End of CSS */
